@@ -23,6 +23,14 @@
 #include "Midi/MeasureData.h"
 #include "Midi/Sequence.h"
 
+#include <wx/checkbox.h>
+#include <wx/sizer.h>
+#include <wx/panel.h>
+#include <wx/textctrl.h>
+#include <wx/button.h>
+#include <wx/stattext.h>
+#include <wx/msgdlg.h>
+
 namespace AriaMaestosa
 {
     
