@@ -2,6 +2,7 @@
 - Fixed song length when importing MIDIs with multiple time signatures
 - Added support for horizontal mouse wheel scrolling (wxWidgets 2.9.1+ only)
 - Fixed rare bug that could cause tracks to have an incorrect instrument name when importing a MIDI
+- Provide graphical warnings when a MIDI file cannot be perfectly loaded
 
 1.2.3
 - Added metronome feature
